--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "redux-observable": "^0.16.0",
     "rxjs": "^5.4.3",
     "typeface-open-sans": "0.0.35",
-    "zone.js": "^0.8.17"
+    "zone.js": "^0.8.17",
+    "font-awesome": "^4.7.0"
   },
   "devDependencies": {
     "@angular/cli": "^1.4.1",
