--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "redux-observable": "^0.16.0",
     "rxjs": "^5.4.3",
     "typeface-open-sans": "0.0.35",
-    "zone.js": "^0.8.17"
+    "zone.js": "^0.8.17",
+    "@angular/compiler-cli": "^4.3.6",
+    "typescript": "~2.3.0"
   },
   "devDependencies": {
     "@angular/cli": "^1.4.1",
